--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 
 .hero {
     height: 95vh; 
-    background-image: url('/images/desktop/image-header.jpg');
+    background-image: url('./images/desktop/image-header.jpg');
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center bottom;
